--- a/programmers/Lv1/약수 구하기.ipynb
+++ b/programmers/Lv1/약수 구하기.ipynb
@@ -27,10 +27,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.9.7 ('reinforcement')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.9.7"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "0e740bf575205bc083f45218be0023a9700b175dfc03db048005449ff4ae974b"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
