--- a/천칭.ipynb
+++ b/천칭.ipynb
@@ -12,73 +12,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from operator import xor\n",
-    "import random\n",
     "\n",
     "\n",
-    "def first(left, right) :\n",
-    "    temp_first = False\n",
-    "    if sum(left) > sum(right) :\n",
-    "        temp_first = True # large\n",
-    "    print(left, right, temp_first)\n",
-    "    return second(left, right, temp_first)\n",
     "\n",
+    "def first(left, mid, right) :\n",
+    "    temp_first = None\n",
+    "    if sum(left) > sum(mid) :\n",
+    "        left_left = left[0:2] + [right[0]] # 1, 2, 9\n",
+    "        left_right = left[2:4] + [mid[0]] # 3, 4, 5\n",
     "\n",
-    "def second(left, right, temp_first) :\n",
-    "    \n",
-    "    left_left = left[0:3] # (0, 1, 2)\n",
-    "    left_right = left[3:6] # (3, 4, 5)\n",
-    "    right_left = right[0:3] #(6, 7, 8)\n",
-    "    right_right = right[3:6] # (9, 10, 11)\n",
-    "    \n",
-    "    temp_second = False\n",
-    "    target = []\n",
-    "    if sum(left_left + right_left) > sum(right_right + left_right): # 3개를 교환했는데 천칭이 똑같이 기운 경우(안 바꾼 곳에 답이 있는 경우) 천칭 #2\n",
-    "        temp_second = True\n",
-    "        if temp_first :\n",
-    "            target = left_left\n",
+    "        if sum(left_left) == sum(left_right) : # 1, 2, 9 vs 3, 4, 5, target = {6, 7, 8}\n",
     "            \n",
-    "        else :\n",
-    "            target = right_left\n",
+    "            if mid[1] == mid[2] :\n",
+    "                answer = mid[3]\n",
+    "            elif mid[1] > mid[2] :\n",
+    "                answer = mid[2]\n",
+    "            else :\n",
+    "                answer = mid[1]\n",
+    "                \n",
     "\n",
-    "    # elif sum(left_left + right_left) < sum(right_right + left_right) :\n",
-    "    else:\n",
+    "        if sum(left_left) > sum(left_right) :\n",
+    "            \n",
+    "\n",
+    "            if left[0] > left[1] :\n",
+    "                answer = left[0]\n",
+    "            elif left[0] < left[1] :\n",
+    "                answer = left[1]\n",
+    "            else :\n",
+    "                answer = mid[0]\n",
+    "\n",
+    "        if sum(left_left) < sum(left_right) : # 1, 2, 5 vs 3, 4, 9(normal)\n",
+    "            if left[2] > left[3] :\n",
+    "                answer = left[2]\n",
+    "            elif left[2] < left[3] :\n",
+    "                answer = left[3]\n",
+    "            else :\n",
+    "                answer = -1\n",
+    "\n",
+    "    elif sum(left) < sum(mid) : # 1, 2, 3, 4 vs 5, 6, 7, 8\n",
+    "        mid_left = mid[0:2] + [right[0]] # 5, 6, 9\n",
+    "        mid_right = mid[2:4] + [left[0]] # 7, 8, 1\n",
+    "\n",
+    "        if sum(mid_left) == sum(mid_right) : # 5, 6, 9 vs 7, 8, 1\n",
+    "            \n",
+    "            if left[1] == left[2] :\n",
+    "                answer = left[3]\n",
+    "            elif left[1] > left[2] :\n",
+    "                answer = left[2]\n",
+    "            else :\n",
+    "                answer = left[1]\n",
+    "                \n",
+    "\n",
+    "        elif sum(mid_left) > sum(mid_right) :\n",
+    "            if mid[0] > mid[1] :\n",
+    "                answer = mid[0]\n",
+    "            elif mid[0] < mid[1] :\n",
+    "                answer = mid[1]\n",
+    "            else :\n",
+    "                answer = left[0]            \n",
+    "\n",
+    "        elif sum(mid_left) < sum(mid_right) : # 5, 6, 9 vs 7, 8, 1(normal)\n",
+    "            if mid[2] > mid[3] :\n",
+    "                answer = mid[2]\n",
+    "            elif mid[2] < mid[3] :\n",
+    "                answer = mid[3]\n",
+    "            else :\n",
+    "                answer = -1                \n",
     "        \n",
-    "        if temp_first :\n",
-    "            target = left_right\n",
     "\n",
-    "        else :\n",
-    "            target = right_right\n",
-    "    # print(target, temp_second)\n",
-    "    return third(target, temp_first, temp_second)\n",
+    "    elif sum(left) == sum(mid) :\n",
+    "        left_left = left[0:3]\n",
+    "        right_left = right[0:3]\n",
+    "        if sum(left_left) == sum(right_left) : # 1, 2, 3, vs 9, 10, 11\n",
+    "            answer = right[3]\n",
+    "        elif sum(left_left) < sum(right_left) :\n",
+    "            if(right[0] > right[1]) :\n",
+    "                answer = right[0]\n",
+    "            elif right[0] < right[1] :\n",
+    "                answer = right[1]\n",
+    "            else :\n",
+    "                answer = right[2]\n",
+    "        elif sum(left_left) > sum(right_left) :\n",
+    "            if(right[0] > right[1]) :\n",
+    "                answer = right[1]\n",
+    "            elif right[0] < right[1] :\n",
+    "                answer = right[0]\n",
+    "            else :\n",
+    "                answer = right[2]            \n",
     "\n",
-    "def third(input, temp_first, temp_second) :\n",
-    "    print(input, temp_first, temp_second)\n",
-    "    answer = -1\n",
-    "    if not (temp_first ^ temp_second):\n",
-    "        if input[0] > input[1] : # 천칭 #3\n",
-    "            answer = input[0]\n",
-    "        elif input[0] == input[1] :\n",
-    "            answer = input[2]\n",
-    "        elif input[0] < input[1] :\n",
-    "            answer = input[1]\n",
-    "        else :\n",
-    "            answer = -1 # error\n",
-    "    else :\n",
-    "        if input[0] > input[1] :    #천칭 #3\n",
-    "            answer = input[]\n",
-    "        elif input[0] == input[1] :\n",
-    "            answer = input[2]\n",
-    "        elif input[0] < input[1] :\n",
-    "            answer = input[1]    \n",
-    "        else :\n",
-    "            answer = -1        \n",
+    "        \n",
+    "\n",
     "    return answer\n",
-    "\n",
     "\n",
     "\n",
     "\n"
@@ -86,10 +114,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 197,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 5, 5, 5, 7, 5, 5, 5, 5, 5, 5, 5]\n",
+      "7\n"
+     ]
+    }
+   ],
    "source": [
+    "from operator import xor\n",
+    "import random\n",
+    "\n",
     "input = [5 for i in range(12)]\n",
     "\n",
     "random_index = random.randint(0, 12)\n",
@@ -97,10 +137,31 @@
     "\n",
     "print(input)\n",
     "\n",
-    "left = input[0:6]\n",
-    "right = input[6:12]\n",
+    "left = input[0:4]\n",
+    "mid = input[4:8]\n",
+    "right = input[8:12]\n",
     "\n",
-    "print(first(left, right))"
+    "print(first(left, mid, right))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 5, 5, 5, 5]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "left + [5]"
    ]
   }
  ],
@@ -111,7 +172,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
   "orig_nbformat": 4,
